--- a/src/Store.css
+++ b/src/Store.css
@@ -12,13 +12,32 @@
 
 .featured-section{
     border: 1px solid blue;
-    max-width: 80%;
+    max-width: 80vw;
     margin: auto;
     padding: max(10px,1vw);
 }
 
+.featured-title{
+    display: flex;
+    align-items: center;
+}
+
 h2.feat{
     margin: 1rem .5rem;
+    display: inline;
+}
+
+.refreshbtn{
+    margin-left: auto;
+    margin-right: 10px; 
+    border: 0px;
+    padding: .3rem;
+    max-height: 35px;
+    border-radius: 90%;
+    background-color: rgb(183, 183, 183);
+}
+.refreshbtn:hover{
+    background-color: rgb(172, 255, 255);
 }
 
 .featurecon{
@@ -33,5 +52,54 @@ h2.feat{
     border: 1px solid gray;
     border-radius: 15px;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
+}
+
+.cardbtn{
+    margin: .3rem;
+    width: max(80px, 60%);
+    padding: .3rem .1rem;
+}
+
+/* search */
+.search-section{
+    margin: auto;
+    display: flex;
+    min-height: 80vh;
+    width: 80vw;
+    
+}
+
+.searchbox{
+    min-width: 40vw;
+    border: 1px solid cyan;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.searchcon{
+    padding: 1rem;
+}
+
+input{
+    width: 20vw;
+    height: 2rem;
+}
+
+.searchbtn{
+    height: 2rem;
+    padding: .3rem;
+    background-color: rgb(91, 187, 255);
+    color: white;
+    border: 0px;
+    font-weight: 600;
+}
+
+.searchbtn:hover{
+    background-color: rgb(209, 255, 255);
+    color: rgb(66, 66, 66);
 }
