--- a/src/Store.css
+++ b/src/Store.css
@@ -10,6 +10,7 @@
     margin: auto;
 }
 
+
 .featured-section{
     border: 1px solid blue;
     max-width: 80vw;
@@ -48,7 +49,7 @@ h2.feat{
 
 
 .cards{
-    width: 15vw;
+    width: max(90px, 15vw);
     min-height: 30vh;
     border: 1px solid gray;
     border-radius: 15px;
@@ -71,7 +72,7 @@ h2.feat{
     display: flex;
     min-height: 55vh;
     width: 80vw;
-    
+
 }
 
 .searchbox{
@@ -83,12 +84,17 @@ h2.feat{
 }
 
 .searchcon{
-    padding: 1rem;
+    padding: max(2px, 2vw);
+    min-width: 220px;
+    display: flex;
+    justify-content: center;
 }
 
 input{
-    width: 20vw;
+    width: max(130px, 20vw);
     height: 2rem;
+    font-size: 1rem;
+    padding: .2rem;
 }
 
 .searchbtn{
@@ -110,7 +116,7 @@ input{
 .previewcard{
     width: 45vw;
     padding: 15px 3rem;
-    border: 1px solid blue;
+    border: 1px solid yellowgreen;
 }
 
 h1#pokedex{
@@ -129,4 +135,22 @@ h1#pokedex{
 .pokepreview{
     width: 200px;
     border: 1px solid gray;
+}
+
+@media screen and (max-width: 700px) {
+    .store-header {
+        max-width: 98vw;
+    }
+    .featured-section{
+        max-width: 96vw;
+    }
+    .search-section{
+        width: 96vw;
+    }
+    .searchbox{
+        width: 45vw;
+    }
+    .previewcard{
+        width: 51vw;
+    }
 }
