fixed some description

--- a/src/Store.css
+++ b/src/Store.css
@@ -119,8 +119,9 @@ input{
     border: 1px solid yellowgreen;
 }
 
-h1#pokedex{
+h2#pokedex{
     margin: 20px 0px;
+    font-size: max(24px, 2vw);
 }
 
 .basicinfo{
