--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -88,6 +88,7 @@ button.storelink{
     font-weight: 700;
     background-color:#3A78B8;
     color: #FEFAF6;
+    border-radius: 10px;
 }
 
 button.storelink:hover{
